Improve profile page

--- a/dev-workflow-ui/cms/cms_de.yaml
+++ b/dev-workflow-ui/cms/cms_de.yaml
@@ -184,10 +184,12 @@ notifications:
   noNotifications: Keine Benachrichtigungen
   notifications: Benachrichtigungen
 profile:
+  accountAndRoles: Benutzerkonto & Rollen
   currentContentLanguage: Aktuelle Sprache
   currentContentLocale: Sprache der aktuellen Sitzung
   currentFormattingLanguage: AKtuelle formattierungs Sprache
   currentFormattingLocale: Formattierungs Sprache der aktuellen Sitzung
+  languageAndLocalization: Sprache & Lokalisierung
 sidebar:
   apiBrowser: API Browser
   cases: Fälle
