--- a/dev-workflow-ui/cms/cms_en.yaml
+++ b/dev-workflow-ui/cms/cms_en.yaml
@@ -184,10 +184,12 @@ notifications:
   noNotifications: No Notifications
   notifications: Notifications
 profile:
+  accountAndRoles: Account & Roles
   currentContentLanguage: Current language
   currentContentLocale: Content locale of the current session
   currentFormattingLanguage: Current formatting language
   currentFormattingLocale: Formatting locale of the current session
+  languageAndLocalization: Language & Localization
 sidebar:
   apiBrowser: API Browser
   cases: Cases
